[package]
name = "warp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
indexmap = { version = "2.7.0", features = ["serde"] }

# warp
warp-ipfs = { git = "https://github.com/Satellite-im/Warp.git", rev = "acc73ec2fe9563e1908641d1b4007af73e8293db"}
warp = { git = "https://github.com/Satellite-im/Warp.git", rev = "acc73ec2fe9563e1908641d1b4007af73e8293db"}

# wasm
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = "0.6.5"
wasm-streams = "0.4.2"
send_wrapper = "0.6.0"
web-sys = "0.3.76"
js-sys = "0.3"
tsify-next = "0.5.4"
macro_utils = { path = "./macro-utils" }

# examples
tiny_file_server = "0.1.5"
